fix scrollbar

--- a/src/components/global.less
+++ b/src/components/global.less
@@ -1,4 +1,9 @@
 
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
 .title {
   background: rgb(121, 242, 157);
 }
